:lipstick: Fix style on mobile devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,5 +9,5 @@ body {
 }
 
 .page-title {
-  font-size: 3rem;
+  font-size: 2rem;
 }
